Remove message about double points since I can't figure out how to code it in XD

--- a/points/index.html
+++ b/points/index.html
@@ -48,7 +48,7 @@
           <!-- Modal body -->
           <div class="modal-body">
             <p>Channel points are a custom system coded by ModMonster for his live streams, inspired by Twitch channel points.</p>
-            <p>You earn <strong>10</strong> channel points for every <strong>5</strong> minutes of watching the stream, and can redeem the points for any of the rewards found on this page. <span class="text-info"><strong>Channel members</strong> earn double the points!</span></p>
+            <p>You earn <strong>10</strong> channel points for every <strong>5</strong> minutes of watching the stream, and can redeem the points for any of the rewards found on this page. <!-- <span class="text-info"><strong>Channel members</strong> earn double the points!</span> --></p> 
             <p>To redeem one of these rewards, just <strong>click</strong> on the reward to copy the command, and paste it into stream chat. It will be activated shortly after.</p>
             <p>To check how many points you have, type <code>!points</code> into the stream chat.</p>
           </div>
