Some rewards point values were incorrect

--- a/points/index.html
+++ b/points/index.html
@@ -196,8 +196,8 @@
         <div class="card" data-bs-toggle="modal" data-bs-target="#ttsModal">
           <img class="card-img-top ratio-1x1" src="img/rewards/stream/tts.png" alt="Reward image">
           <div class="card-body">
-            <h4 class="card-title">Text-to-Speech</h4>
-            <h6 class="card-subtitle mb-2 text-body-secondary"><i class="fa fa-coins fa-fw"></i> 300 points</h6>
+            <h4 class="card-title">Text to Speech</h4>
+            <h6 class="card-subtitle mb-2 text-body-secondary"><i class="fa fa-coins fa-fw"></i> 150 points</h6>
             <p class="card-text reward-description" data-replace="Click to copy command"><span>Get your message read by TTS!</span></p>
           </div>
         </div>
@@ -377,7 +377,7 @@
               <h4 class="card-title">Sad Trombone</h4>
               <i onclick="playSound('sfx/sadtrombone.mp3')" role="button" class="fa fa-volume-low fa-fw float-right my-2" data-bs-toggle="tooltip" title="Preview sound"></i>
             </div>
-            <h6 class="card-subtitle mb-2 text-body-secondary"><i class="fa fa-coins fa-fw"></i> 35 points</h6>
+            <h6 class="card-subtitle mb-2 text-body-secondary"><i class="fa fa-coins fa-fw"></i> 25 points</h6>
             <p class="card-text reward-description" data-replace="Click to copy command"><span>Womp womp womp wommmp...</span></p>
           </div>
         </div>
