More new rewards

--- a/points/index.html
+++ b/points/index.html
@@ -104,16 +104,35 @@
     <div class="row reward-grid">
       <h2 class="my-4 text-warning"><i class="fa fa-exclamation-circle fa-xs fa-fw"></i> New Effects</h2>
       <div class="card-parent col-md-6 col-lg-4 col-xl-3 my-2">
-        <div class="card" onclick="copyCommand('fnaf')">
-          <img class="card-img-top ratio-1x1" src="img/rewards/sfx/fnaf.png" alt="Reward image">
+        <div class="card" onclick="copyCommand('144p')">
+          <img class="card-img-top ratio-1x1" src="img/rewards/stream/144p.png" alt="Reward image">
           <div class="card-body">
-            <h6 class="card-text text-muted">Sound Only</h6>
-            <div class="d-flex justify-content-between">
-              <h4 class="card-title">Music Box</h4>
-              <i onclick="playSound('sfx/fnaf.mp3')" role="button" class="fa fa-volume-low fa-fw float-right my-2" data-bs-toggle="tooltip" title="Preview sound"></i>
-            </div>
-            <h6 class="card-subtitle mb-2 text-body-secondary"><i class="fa fa-coins fa-fw"></i> 50 points</h6>
-            <p class="card-text reward-description" data-replace="Click to copy command"><span>very calming, not scary</span></p>
+            <h6 class="card-text text-muted">Sound & Visuals</h6>
+            <h4 class="card-title">144p</h4>
+            <h6 class="card-subtitle mb-2 text-body-secondary"><i class="fa fa-coins fa-fw"></i> 350 points</h6>
+            <p class="card-text reward-description" data-replace="Click to copy command"><span>RTX off</span></p>
+          </div>
+        </div>
+      </div>
+      <div class="card-parent col-md-6 col-lg-4 col-xl-3 my-2">
+        <div class="card" onclick="copyCommand('superstar')">
+          <img class="card-img-top ratio-1x1" src="img/rewards/stream/disappear.png" alt="Reward image">
+          <div class="card-body">
+            <h6 class="card-text text-muted">Sound & Visuals</h6>
+            <h4 class="card-title">Disappear</h4>
+            <h6 class="card-subtitle mb-2 text-body-secondary"><i class="fa fa-coins fa-fw"></i> 200 points</h6>
+            <p class="card-text reward-description" data-replace="Click to copy command"><span>Cya</span></p>
+          </div>
+        </div>
+      </div>
+      <div class="card-parent col-md-6 col-lg-4 col-xl-3 my-2">
+        <div class="card" onclick="copyCommand('fisheye')">
+          <img class="card-img-top ratio-1x1" src="img/rewards/stream/fisheye.png" alt="Reward image">
+          <div class="card-body">
+            <h6 class="card-text text-muted">Sound & Visuals</h6>
+            <h4 class="card-title">Fisheye</h4>
+            <h6 class="card-subtitle mb-2 text-body-secondary"><i class="fa fa-coins fa-fw"></i> 250 points</h6>
+            <p class="card-text reward-description" data-replace="Click to copy command"><span>Mmmmm funny camera</span></p>
           </div>
         </div>
       </div>
@@ -128,10 +147,34 @@
           </div>
         </div>
       </div>
+      <div class="card-parent col-md-6 col-lg-4 col-xl-3 my-2">
+        <div class="card" onclick="copyCommand('fnaf')">
+          <img class="card-img-top ratio-1x1" src="img/rewards/sfx/fnaf.png" alt="Reward image">
+          <div class="card-body">
+            <h6 class="card-text text-muted">Sound Only</h6>
+            <div class="d-flex justify-content-between">
+              <h4 class="card-title">Music Box</h4>
+              <i onclick="playSound('sfx/fnaf.mp3')" role="button" class="fa fa-volume-low fa-fw float-right my-2" data-bs-toggle="tooltip" title="Preview sound"></i>
+            </div>
+            <h6 class="card-subtitle mb-2 text-body-secondary"><i class="fa fa-coins fa-fw"></i> 50 points</h6>
+            <p class="card-text reward-description" data-replace="Click to copy command"><span>very calming, not scary</span></p>
+          </div>
+        </div>
+      </div>
     </div>
 
     <div class="row reward-grid">
       <h2 class="my-4">Sound & Visuals</h2>
+      <div class="card-parent col-md-6 col-lg-4 col-xl-3 my-2">
+        <div class="card" onclick="copyCommand('144p')">
+          <img class="card-img-top ratio-1x1" src="img/rewards/stream/144p.png" alt="Reward image">
+          <div class="card-body">
+            <h4 class="card-title">144p</h4>
+            <h6 class="card-subtitle mb-2 text-body-secondary"><i class="fa fa-coins fa-fw"></i> 350 points</h6>
+            <p class="card-text reward-description" data-replace="Click to copy command"><span>RTX off</span></p>
+          </div>
+        </div>
+      </div>
       <div class="card-parent col-md-6 col-lg-4 col-xl-3 my-2">
         <div class="card" onclick="copyCommand('barrelroll')">
           <img class="card-img-top ratio-1x1" src="img/rewards/stream/doabarrelroll.png" alt="Reward image">
@@ -143,12 +186,32 @@
         </div>
       </div>
       <div class="card-parent col-md-6 col-lg-4 col-xl-3 my-2">
+        <div class="card" onclick="copyCommand('superstar')">
+          <img class="card-img-top ratio-1x1" src="img/rewards/stream/disappear.png" alt="Reward image">
+          <div class="card-body">
+            <h4 class="card-title">Disappear</h4>
+            <h6 class="card-subtitle mb-2 text-body-secondary"><i class="fa fa-coins fa-fw"></i> 200 points</h6>
+            <p class="card-text reward-description" data-replace="Click to copy command"><span>Cya</span></p>
+          </div>
+        </div>
+      </div>
+      <div class="card-parent col-md-6 col-lg-4 col-xl-3 my-2">
         <div class="card" onclick="copyCommand('drugs')">
           <img class="card-img-top ratio-1x1" src="img/rewards/stream/drugs.png" alt="Reward image">
           <div class="card-body">
             <h4 class="card-title">Drugs</h4>
             <h6 class="card-subtitle mb-2 text-body-secondary"><i class="fa fa-coins fa-fw"></i> 350 points</h6>
-            <p class="card-text reward-description" data-replace="Click to copy command"><span>Mario had too many mushrooms...</span></p>
+            <p class="card-text reward-description" data-replace="Click to copy command"><span>Mario had too many mushrooms</span></p>
+          </div>
+        </div>
+      </div>
+      <div class="card-parent col-md-6 col-lg-4 col-xl-3 my-2">
+        <div class="card" onclick="copyCommand('fisheye')">
+          <img class="card-img-top ratio-1x1" src="img/rewards/stream/fisheye.png" alt="Reward image">
+          <div class="card-body">
+            <h4 class="card-title">Fisheye</h4>
+            <h6 class="card-subtitle mb-2 text-body-secondary"><i class="fa fa-coins fa-fw"></i> 250 points</h6>
+            <p class="card-text reward-description" data-replace="Click to copy command"><span>Mmmmm funny camera</span></p>
           </div>
         </div>
       </div>
@@ -157,7 +220,7 @@
           <img class="card-img-top ratio-1x1" src="img/rewards/stream/miichannel.png" alt="Reward image">
           <div class="card-body">
             <h4 class="card-title">Mii Channel</h4>
-            <h6 class="card-subtitle mb-2 text-body-secondary"><i class="fa fa-coins fa-fw"></i> 350 points</h6>
+            <h6 class="card-subtitle mb-2 text-body-secondary"><i class="fa fa-coins fa-fw"></i> 450 points</h6>
             <p class="card-text reward-description" data-replace="Click to copy command"><span>Very distracting. Very effective.</span></p>
           </div>
         </div>
