--- a/points/index.html
+++ b/points/index.html
@@ -115,7 +115,7 @@
         </div>
       </div>
       <div class="card-parent col-md-6 col-lg-4 col-xl-3 my-2">
-        <div class="card" onclick="copyCommand('superstar')">
+        <div class="card" onclick="copyCommand('disappear')">
           <img class="card-img-top ratio-1x1" src="img/rewards/stream/disappear.png" alt="Reward image">
           <div class="card-body">
             <h6 class="card-text text-muted">Sound & Visuals</h6>
@@ -186,7 +186,7 @@
         </div>
       </div>
       <div class="card-parent col-md-6 col-lg-4 col-xl-3 my-2">
-        <div class="card" onclick="copyCommand('superstar')">
+        <div class="card" onclick="copyCommand('disappear')">
           <img class="card-img-top ratio-1x1" src="img/rewards/stream/disappear.png" alt="Reward image">
           <div class="card-body">
             <h4 class="card-title">Disappear</h4>
