add bouncer sfx!!!

--- a/points/index.html
+++ b/points/index.html
@@ -104,55 +104,16 @@
     <div class="row reward-grid">
       <h2 class="my-4 text-warning"><i class="fa fa-exclamation-circle fa-xs fa-fw"></i> New Effects</h2>
       <div class="card-parent col-md-6 col-lg-4 col-xl-3 my-2">
-        <div class="card" onclick="copyCommand('punch')">
-          <img class="card-img-top ratio-1x1" src="img/rewards/stream/punch.png" alt="Reward image">
-          <div class="card-body">
-            <h6 class="card-text text-muted">Sound & Visuals</h6>
-            <h4 class="card-title">Punch Me In The Face</h4>
-            <h6 class="card-subtitle mb-2 text-body-secondary"><i class="fa fa-coins fa-fw"></i> 500 points</h6>
-            <p class="card-text reward-description" data-replace="Click to copy command"><span>Rude >:(</span></p>
-          </div>
-        </div>
-      </div>
-      <div class="card-parent col-md-6 col-lg-4 col-xl-3 my-2">
-        <div class="card" onclick="copyCommand('helicopter')">
-          <img class="card-img-top ratio-1x1" src="img/rewards/sfx/helicopter.png" alt="Reward image">
+        <div class="card" onclick="copyCommand('bouncer')">
+          <img class="card-img-top ratio-1x1" src="img/rewards/sfx/bouncer.png" alt="Reward image">
           <div class="card-body">
             <h6 class="card-text text-muted">Sound Only</h6>
             <div class="d-flex justify-content-between">
-              <h4 class="card-title">Helicopter Parents</h4>
-              <i onclick="playSound('sfx/helicopter.mp3')" role="button" class="fa fa-volume-low fa-fw float-right my-2" data-bs-toggle="tooltip" title="Preview sound"></i>
-            </div>
-            <h6 class="card-subtitle mb-2 text-body-secondary"><i class="fa fa-coins fa-fw"></i> 300 points</h6>
-            <p class="card-text reward-description" data-replace="Click to copy command"><span>Be careful out there, buddy!</span></p>
-          </div>
-        </div>
-      </div>
-      <div class="card-parent col-md-6 col-lg-4 col-xl-3 my-2">
-        <div class="card" onclick="copyCommand('metalpipe')">
-          <img class="card-img-top ratio-1x1" src="img/rewards/sfx/metalpipe.png" alt="Reward image">
-          <div class="card-body">
-            <h6 class="card-text text-muted">Sound Only</h6>
-            <div class="d-flex justify-content-between">
-              <h4 class="card-title">Metal Pipe Falling</h4>
-              <i onclick="playSound('sfx/metalpipe.mp3')" role="button" class="fa fa-volume-low fa-fw float-right my-2" data-bs-toggle="tooltip" title="Preview sound"></i>
+              <h4 class="card-title">Bouncer</h4>
+              <i onclick="playSound('sfx/bouncer.mp3')" role="button" class="fa fa-volume-low fa-fw float-right my-2" data-bs-toggle="tooltip" title="Preview sound"></i>
             </div>
             <h6 class="card-subtitle mb-2 text-body-secondary"><i class="fa fa-coins fa-fw"></i> 250 points</h6>
-            <p class="card-text reward-description" data-replace="Click to copy command"><span>Ow my eardrums</span></p>
-          </div>
-        </div>
-      </div>
-      <div class="card-parent col-md-6 col-lg-4 col-xl-3 my-2">
-        <div class="card" onclick="copyCommand('nostop')">
-          <img class="card-img-top ratio-1x1" src="img/rewards/sfx/nostop.png" alt="Reward image">
-          <div class="card-body">
-            <h6 class="card-text text-muted">Sound Only</h6>
-            <div class="d-flex justify-content-between">
-              <h4 class="card-title">No, Stop!</h4>
-              <i onclick="playSound('sfx/nostop.mp3')" role="button" class="fa fa-volume-low fa-fw float-right my-2" data-bs-toggle="tooltip" title="Preview sound"></i>
-            </div>
-            <h6 class="card-subtitle mb-2 text-body-secondary"><i class="fa fa-coins fa-fw"></i> 500 points</h6>
-            <p class="card-text reward-description" data-replace="Click to copy command"><span>Me when the societies are hidden</span></p>
+            <p class="card-text reward-description" data-replace="Click to copy command"><span>I can't believe you've done this.</span></p>
           </div>
         </div>
       </div>
@@ -327,6 +288,19 @@
             </div>
             <h6 class="card-subtitle mb-2 text-body-secondary"><i class="fa fa-coins fa-fw"></i> 125 points</h6>
             <p class="card-text reward-description" data-replace="Click to copy command"><span>Taco Bell moment</span></p>
+          </div>
+        </div>
+      </div>
+      <div class="card-parent col-md-6 col-lg-4 col-xl-3 my-2">
+        <div class="card" onclick="copyCommand('bouncer')">
+          <img class="card-img-top ratio-1x1" src="img/rewards/sfx/bouncer.png" alt="Reward image">
+          <div class="card-body">
+            <div class="d-flex justify-content-between">
+              <h4 class="card-title">Bouncer</h4>
+              <i onclick="playSound('sfx/bouncer.mp3')" role="button" class="fa fa-volume-low fa-fw float-right my-2" data-bs-toggle="tooltip" title="Preview sound"></i>
+            </div>
+            <h6 class="card-subtitle mb-2 text-body-secondary"><i class="fa fa-coins fa-fw"></i> 250 points</h6>
+            <p class="card-text reward-description" data-replace="Click to copy command"><span>I can't believe you've done this.</span></p>
           </div>
         </div>
       </div>
